# mrg-sequential

./: Doxyfile  LICENCE  Makefile.am  Makefile.in  bitmap.c  bitmap.h  config.h.in  configure  configure.in  graf.txt  list.c  list.h  matrix.c  matrix.h  mkinstalldirs  mrg.c  test_bitmap.c
