dnl Process this file with autoconf to produce a configure script.
AC_INIT(mrg.c)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE(mrg, 0.2)
AC_PROG_CC
AC_C_CONST
AC_C_INLINE
AC_HEADER_STDC
AC_CHECK_FUNCS([memcpy memset])
AC_CHECK_HEADERS([limits.h time.h])
AC_CHECK_SIZEOF([char])
AM_CONFIG_HEADER([config.h])
AC_PROG_INSTALL
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
